--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\""
   },
+  "main": "public/electron.js",
   "dependencies": {
+    "concurrently": "^8.2.2",
+    "electron": "^28.1.2",
+    "electron-builder": "^24.9.1",
+    "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "wait-on": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
